--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
 	<meta name="Author" content="Тищенко Иван Владимирович">
 	<title>Test kprod.agency</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" href="img/favicon.ico" type="img/favicon.ico">
 </head>
 <body>
+	<div class="cross1"></div>
+		<div class="cross2"></div>
+		<div class="cross3"></div>
+		<div class="ring"></div>
+		<div class="bubble1"></div>
+		<div class="bubble2"></div>
+		<div class="bubble3"></div>
+
 	<div class="container">
-		<div class="logo"><img src="img/logo.svg" alt="logo"></div>
+		<div class="vector1"></div>
+		<div class="vector2"></div>
+		<div class="vector3"></div>
+				<div class="logo"><img src="img/logo.svg" alt="logo"></div>
 		  <div class="header">
 			
 			<div class="menu">
@@ -42,8 +54,68 @@
 				</form>
 			</div>
 			<div class="baner">
+				<img src="img/1.svg" alt="" class="dot">
 				<div class="square"></div>
 				<img src="img/girl.svg" alt="" class="girl">
+				<div class="triangle"></div>
+				<div class="baner__clients">
+					<div class="img__circle clients"><img src="img/Color.svg" alt=""></div><span>+80%</span><p>К количеству <br> клиентов</p></div>
+				<div class="baner__sales">
+					<div class="img__circle sales"><img src="img/Color (1).svg" alt=""></div>
+					<div class="baner__sales_column"><span>1 000+</span><p>Продаж через интернет <br>за 2 месяца</p></div>
+				
+			    </div>
+				<div class="baner__profit">
+					<div class="img__circle profit"><img src="img/arrow.svg" alt="">
+							<p>Рост прибыли <br>компании</p>
+					</div>
+					<div class="table">
+						<div class="table__column">
+						<p>400</p>
+						<p>300</p>
+						<p>200</p>
+						<p>100</p>
+					</div>
+					<table>
+						<tr>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+						</tr>
+						<tr>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+						</tr>
+						<tr>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+						</tr>
+						<tr>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+							<th></th>
+						</tr>
+					</table>
+					<div class="curve">
+						<img src="img/Vector.svg" alt="">
+					</div>
+					</div>
+					
+				</div>
 
 
 			</div>
